fixing issue where custom logo and hamburger menu overlap FIT-1810

--- a/themes/expressbase/scss/components/_branding.scss
+++ b/themes/expressbase/scss/components/_branding.scss
@@ -89,6 +89,15 @@
 img.custom-logo {
   max-width: 100%;
 }
+a.custom-logo-link {
+  display: block;
+  padding-right: 35px;
+}
+@media screen and (min-width: 480px) {
+  a.custom-logo-link {
+    padding-right: 65px;
+  }
+}
 
 #cu-footer img {
   max-width: 300px;
